syntax = "proto3";

option go_package = "github.com/bcrusu/raftrocksdb";

import "google/protobuf/timestamp.proto";

enum LogType {
    LogCommand = 0;
	LogNoop = 1;
	LogAddPeerDeprecated = 2;
	LogRemovePeerDeprecated = 3;
	LogBarrier = 4;
	LogConfiguration = 5;
}

message Log {
	uint64 index = 1;
	uint64 term = 2;
	LogType type = 3;
	bytes data = 4;
	bytes extensions = 5;
	google.protobuf.Timestamp appended_at = 6;
}
